Home page finished first screen

--- a/index.html
+++ b/index.html
@@ -2,46 +2,68 @@
 layout: default
 title: Home
 ---
-<div class="px-3 py-5 my-5 text-center">
-  <h1 class="display-3 fw-bold">Amaury Butaux</h1>
+<div class="px-3 pt-5 my-0 pb-0 text-left">
+
   <div class="col-md-8 col-lg-6 mx-auto">
-      <p class="lead mb-4">
-      I am a polyvalent game developer with two main skills:
-          <b>game design</b> and <em>gameplay programming</em>.
-      </p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+    <div class="row">
+      <img class="rounded-circle col-md-4 col-6"src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
+      <div class="col-md-8 col-6 d-flex">
+        <ul class="list-unstyled align-self-end flex-column col-12 row">
+          <div class="col-12"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><li class="bi bi-linkedin"><span class="nav-other-websites-desc"> LinkedIn</span></li></a></div>
+          <div class="col-12"><a class="badge badge-light" href="https://oramy.itch.io"><li><img src="{{"/assets/images/itchio-textless-black.svg" | relative_url }}" class="inline-image"/><span class="nav-other-websites-desc"> itch.io</span></li></a></div>
+          <div class="col-12"><a class="badge badge-light" href="https://oramy.github.io/resume.pdf"><li class="bi bi-file-person"><span class="nav-other-websites-desc"> Resume</span></li></a></div>
+        </ul>
+      </div> 
+    </div>
+  </div>
+  <h1 class="col-md-8 col-lg-6 display-2 fw-bold mx-auto">Amaury Butaux</h1>
+  <div class="col-md-8 col-lg-6 mx-auto">
+      <h2 class="ml-3 mt-4">
+      Junior Game Designer <small class="text-primary" id="Subtitles"></small>
+      </h2>
+  </div>
+</div>
+<div class="px-3 my-0 pb-0 text-left bg-light">
+  <div class="mb-0 bg-light pt-3 pb-3">
+    <div class="col-md-8 col-lg-6 mx-auto d-flex">
+      <h6 class="ml-3 px-0 align-self-middle align-middle">Looking for a <b>6 months game design internship</b>
+        beginning in <b>February 2023.</b></h6>
+    </div>
+  </div>
+  <!--<div class="col-md-8 col-lg-6 mx-auto">
+    <div class="d-grid d-sm-flex justify-content-sm-center">
       <button type="button" class="btn btn-primary btn-lg px-4 gap-3 mx-1">Game Designer</button>
       <button type="button" class="btn btn-outline-secondary btn-lg px-4 mx-1">Gameplay Programmer</button>
+    </div>-->
+</div>
+<div class="jumbotron-fluid mx-0 px-0 paralsec paral">
+  <div class="px-3 pt-5 my-0 pb-0 text-left">
+    <div class="py-4"></div>
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>User-Centric</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Rational</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Documents</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
 
-<div class="container col-md-8 col-lg-6">
-  <p>Nulla placerat posuere lorem vitae pulvinar. Pellentesque lectus urna, sollicitudin vel laoreet sit amet, molestie ut arcu. Sed vitae nibh quis ante dictum sodales. Quisque vel enim purus. Aenean euismod et risus sit amet mollis. Vivamus et odio nec enim sollicitudin vehicula. Suspendisse bibendum tortor elit, a ultrices mi rhoncus id. Duis imperdiet magna quis ultricies scelerisque. Sed ullamcorper sollicitudin euismod. Proin libero est, faucibus quis viverra sed, tincidunt sed metus. Sed venenatis dictum maximus. Mauris ac metus malesuada, mollis risus at, venenatis nisi. Cras euismod leo sem, sed tristique libero convallis quis. Mauris tincidunt feugiat neque sed bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-  </p>
-</div>
 <hr class="my-5">
-<div class="container">
-  <!-- Example row of columns -->
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
-    </div>
-  </div>
-
-</div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
