Carousel of projects with 3 projects : Fired up, 45 degrees and others

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 
   <div class="col-md-8 col-lg-6 mx-auto">
     <div class="row">
-      <img class="rounded-circle col-md-4 col-6"src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
+      <img class="rounded-circle col-md-4 col-6" src="{{ "/assets/images/photo_linkedin.jpg" | relative_url }}" />
       <div class="col-md-8 col-6 d-flex">
         <ul class="list-unstyled align-self-end flex-column col-12 row">
           <div class="col-12"><a class="badge badge-light" href="https://linkedin.com/in/amaury-butaux"><li class="bi bi-linkedin"><span class="nav-other-websites-desc"> LinkedIn</span></li></a></div>
@@ -63,62 +63,103 @@ title: Home
   </div>
 </div>
 
-<hr class="my-5">
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div class="my-0 py-4 bg-primary"></div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="20000">
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1" class=""></li>
     <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-    <li data-target="#myCarousel" data-slide-to="3" class=""></li>
-    <li data-target="#myCarousel" data-slide-to="4" class=""></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
-        <div class="carousel-caption text-left">         
-          <h1>Fired Up!</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+      <video title="Fired Up!" preload="auto" autoplay loop class="first-slide">
+        <source src="{{ "/assets/images/fired_up/Fired_Up_Trailer-SD_NoSound.mp4" | relative_url }}" type="video/mp4">
+        <p>Fired Up!</p>
+      </video> 
+      <div class="carousel-caption rounded bg-light p-3 text-left">         
+        <div class="row d-flex px-2">
+          <h1 class="p-2 mr-auto">Fired Up!</h1>
+          <div class="p-2 align-self-end text-right" >
+            <span class="badge badge-info">3 months</span>
+            <span class="badge badge-info">6 developers</span>
+            <br />
+            <span class="badge badge-primary">Game Designer</span>
+            <span class="badge badge-secondary">Level Designer</span>
+            <!--
+            <br />
+            <span class="badge badge-success">3Cs</span>
+            <span class="badge badge-success">System Design</span>
+            <span class="badge badge-success">Signs</span>
+            <span class="badge badge-success">Feedbacks</span>
+            <span class="badge badge-success">Balancing</span>
+            -->
+          </div>
         </div>
-    </div>
-    <div class="carousel-item">
-      <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-      <div class="container">
-        <div class="carousel-caption text-left">
-          <h1>45°</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+        <div class="row d-flex px-2">
+        <p class="text-dark col-12 col-md-8 col-lg-8">A <b>4 player co-op couch game</b> where you use whatever you find in the house to save it from the flames.</p>
         </div>
+        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+      </div>
+  </div>
+  <div class="carousel-item">
+    <video title="45°" preload="auto" autoplay loop class="second-slide">
+      <source src="{{ "/assets/images/45_degrees/45_degrees_trailer.mp4" | relative_url }}" type="video/mp4">
+      <p>45°</p>
+    </video> 
+      <div class="carousel-caption rounded bg-light p-3 text-left">         
+        <div class="row d-flex px-2">
+          <h1 class="p-2 mr-auto">45°</h1>
+          <div class="p-2 align-self-end text-right" >
+            <span class="badge badge-info">2 weeks</span>
+            <span class="badge badge-info">9 developers</span>
+            <br />
+            <span class="badge badge-primary">Game Designer</span>
+            <span class="badge badge-secondary">Level Designer</span>
+            <!--
+            <br />
+            <span class="badge badge-success">3Cs</span>
+            <span class="badge badge-success">System Design</span>
+            <span class="badge badge-success">Signs</span>
+            <span class="badge badge-success">Feedbacks</span>
+            <span class="badge badge-success">Balancing</span>
+            -->
+          </div>
+        </div>
+        <div class="row d-flex px-2">
+          <p class="text-dark col-12 col-md-8 col-lg-8">
+            Two spaceships on the run! <b>You can only take 45° turns</b>, scrolling at lightspeed in the winding corridors of a gigantic spaceship. 
+            Will you take the risk of going faster, or will you let your opponent outrun you?
+          </p>
+        </div>
+        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-      <div class="container">
-        <div class="carousel-caption text-left">
-          <h1>Elephant Game</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+      <img class="third-slide" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
+      <div class="carousel-caption rounded bg-light p-3 text-left">         
+        <div class="row d-flex px-2">
+          <h1 class="p-2 mr-auto">Personal Projects <span class="text-muted">& Game Jams</span></h1>
+          <div class="p-2 align-self-end text-right" >
+            <span class="badge badge-primary">Game Designer</span>
+            <span class="badge badge-secondary">Level Designer</span>
+            <br />
+            <span class="badge badge-info">Gameplay Programmer</span>
+            <!--
+            <br />
+            <span class="badge badge-success">3Cs</span>
+            <span class="badge badge-success">System Design</span>
+            <span class="badge badge-success">Signs</span>
+            <span class="badge badge-success">Feedbacks</span>
+            <span class="badge badge-success">Balancing</span>
+            -->
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-      <div class="container">
-        <div class="carousel-caption text-left">
-          <h1>Game Jams</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+        <div class="row d-flex px-2">
+          <p class="text-dark col-12 col-md-8 col-lg-8">
+            I have made many other game projects, which allowed me to develop various skills over the years.
+          </p>
         </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-      <div class="container">
-        <div class="carousel-caption text-left">
-          <h1>Other Creative Work</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-        </div>
+        <p><a class="btn btn-lg btn-primary" href="https://oramy.itch.io" role="button">All Projects</a></p>
       </div>
     </div>
   </div>
