--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: Home
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <video title="Fired Up!" preload="auto" autoplay loop class="first-slide">
+      <video title="Fired Up!" preload="auto" autoplay loop class="first-slide carousel-item-background">
         <source src="{{ "/assets/images/fired_up/Fired_Up_Trailer-SD_NoSound.mp4" | relative_url }}" type="video/mp4">
         <p>Fired Up!</p>
       </video> 
@@ -102,7 +102,7 @@ title: Home
       </div>
   </div>
   <div class="carousel-item">
-    <video title="45°" preload="auto" autoplay loop class="second-slide">
+    <video title="45°" preload="auto" autoplay loop class="second-slide carousel-item-background">
       <source src="{{ "/assets/images/45_degrees/45_degrees_trailer.mp4" | relative_url }}" type="video/mp4">
       <p>45°</p>
     </video> 
@@ -135,7 +135,7 @@ title: Home
       </div>
     </div>
     <div class="carousel-item">
-      <img class="third-slide" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
+      <img class="third-slide carousel-item-background" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
       <div class="carousel-caption rounded bg-light p-3 text-left">         
         <div class="row d-flex px-2">
           <h1 class="p-2 mr-auto">Personal Projects <span class="text-muted">& Game Jams</span></h1>
@@ -163,11 +163,11 @@ title: Home
       </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+  <a class="carousel-control-prev carousel-control-big-icon" href="#myCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+  <a class="carousel-control-next carousel-control-big-icon" href="#myCarousel" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
