Adedd xdefiant project

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ title: Home
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1" class=""></li>
     <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+    <li data-target="#myCarousel" data-slide-to="3" class=""></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -135,6 +136,40 @@ title: Home
       </div>
     </div>
     <div class="carousel-item">
+      <video title="45°" preload="auto" autoplay loop class="second-slide carousel-item-background">
+        <source src="{{ "/assets/images/xdefiant/xdefiant_gameplay.mp4" | relative_url }}" type="video/mp4">
+        <p>XDefiant</p>
+      </video> 
+      <div class="carousel-caption rounded bg-light p-3 text-left">         
+        <div class="row d-flex px-2">
+          <h1 class="p-2 mr-auto">XDefiant</h1>
+          <div class="p-2 align-self-end text-right" >
+            <span class="badge badge-info">6 months</span>
+            <span class="badge badge-info">Internship</span>
+            <br />
+            <span class="badge badge-primary">Gameplay Programmer</span>
+            <!--
+            <br />
+            <span class="badge badge-success">3Cs</span>
+            <span class="badge badge-success">System Design</span>
+            <span class="badge badge-success">Signs</span>
+            <span class="badge badge-success">Feedbacks</span>
+            <span class="badge badge-success">Balancing</span>
+            -->
+          </div>
+        </div>
+        <div class="row d-flex px-2">
+          <p class="text-dark col-12 col-md-8 col-lg-8">
+          Tom Clancy's XDefiant is a <b>free-to-play</b>, <b>fast-paced arena shooter</b> that combines intense gunplay
+          with personalized loadouts and specialized factions,
+          as teams of gunfighters – called Defiants – battle for domination.
+          </p>
+        </div>
+        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+      </div>
+    </div>
+    
+    <div class="carousel-item">
       <img class="third-slide carousel-item-background" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
       <div class="carousel-caption rounded bg-light p-3 text-left">         
         <div class="row d-flex px-2">
@@ -175,5 +210,5 @@ title: Home
 
 <hr class="my-5">
 <div class="container">
-<h1>Contacting me</h1>
+<h1>About me</h1>
 </div>
