--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@ title: Home
       </div>
     </div>
   </div>
-  <a class="carousel-control-prev carousel-control-big-icon" href="#myCarousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon carousel-control-big-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next carousel-control-big-icon" href="#myCarousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon carousel-control-big-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
