--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
   <h1 class="col-md-8 col-lg-6 display-2 fw-bold mx-auto">Amaury Butaux</h1>
   <div class="col-md-8 col-lg-6 mx-auto">
       <h2 class="ml-3 mt-4">
-      Junior Game Designer <small class="text-primary" id="Subtitles"></small>
+      Junior Game Designer <!--<small class="text-primary" id="Subtitles"></small>-->
       </h2>
   </div>
 </div>
@@ -72,103 +72,46 @@ title: Home
     <li data-target="#myCarousel" data-slide-to="3" class=""></li>
   </ol>
   <div class="carousel-inner">
+    {% for project_hash in site.data.projects %}
+    {% assign project = project_hash[1] %}
+    {% if project.featured %}
+    {% if forloop.index == 1 %}
     <div class="carousel-item active">
-      <video title="Fired Up!" preload="auto" autoplay loop class="first-slide carousel-item-background">
-        <source src="{{ "/assets/images/fired_up/Fired_Up_Trailer-SD_NoSound.mp4" | relative_url }}" type="video/mp4">
-        <p>Fired Up!</p>
-      </video> 
-      <div class="carousel-caption rounded bg-light p-3 text-left">         
-        <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">Fired Up!</h1>
-          <div class="p-2 align-self-end text-right" >
-            <span class="badge badge-info">3 months</span>
-            <span class="badge badge-info">6 developers</span>
-            <br />
-            <span class="badge badge-primary">Game Designer</span>
-            <span class="badge badge-secondary">Level Designer</span>
-            <!--
-            <br />
-            <span class="badge badge-success">3Cs</span>
-            <span class="badge badge-success">System Design</span>
-            <span class="badge badge-success">Signs</span>
-            <span class="badge badge-success">Feedbacks</span>
-            <span class="badge badge-success">Balancing</span>
-            -->
-          </div>
-        </div>
-        <div class="row d-flex px-2">
-        <p class="text-dark col-12 col-md-8 col-lg-8">A <b>4 player co-op couch game</b> where you use whatever you find in the house to save it from the flames.</p>
-        </div>
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-      </div>
-  </div>
-  <div class="carousel-item">
-    <video title="45°" preload="auto" autoplay loop class="second-slide carousel-item-background">
-      <source src="{{ "/assets/images/45_degrees/45_degrees_trailer.mp4" | relative_url }}" type="video/mp4">
-      <p>45°</p>
-    </video> 
-      <div class="carousel-caption rounded bg-light p-3 text-left">         
-        <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">45°</h1>
-          <div class="p-2 align-self-end text-right" >
-            <span class="badge badge-info">2 weeks</span>
-            <span class="badge badge-info">9 developers</span>
-            <br />
-            <span class="badge badge-primary">Game Designer</span>
-            <span class="badge badge-secondary">Level Designer</span>
-            <!--
-            <br />
-            <span class="badge badge-success">3Cs</span>
-            <span class="badge badge-success">System Design</span>
-            <span class="badge badge-success">Signs</span>
-            <span class="badge badge-success">Feedbacks</span>
-            <span class="badge badge-success">Balancing</span>
-            -->
-          </div>
-        </div>
-        <div class="row d-flex px-2">
-          <p class="text-dark col-12 col-md-8 col-lg-8">
-            Two spaceships on the run! <b>You can only take 45° turns</b>, scrolling at lightspeed in the winding corridors of a gigantic spaceship. 
-            Will you take the risk of going faster, or will you let your opponent outrun you?
-          </p>
-        </div>
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-      </div>
-    </div>
+    {% else %}
     <div class="carousel-item">
-      <video title="45°" preload="auto" autoplay loop class="second-slide carousel-item-background">
-        <source src="{{ "/assets/images/xdefiant/xdefiant_gameplay.mp4" | relative_url }}" type="video/mp4">
-        <p>XDefiant</p>
-      </video> 
+    {% endif %}
+      <video title="{{ project.title }}" preload="auto" autoplay loop class="first-slide carousel-item-background">
+        <source src="{{ project.sd-no-sound-video | relative_url }}" type="video/mp4">
+        <p>{{ project.title }}</p>
+     </video>
       <div class="carousel-caption rounded bg-light p-3 text-left">         
         <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">XDefiant</h1>
+          <h1 class="p-2 mr-auto">{{ project.title }}</h1>
           <div class="p-2 align-self-end text-right" >
-            <span class="badge badge-info">6 months</span>
-            <span class="badge badge-info">Internship</span>
+            {% for line in project.badges %}
+            {% for badge in line %}
+            {% assign badge_data = site.data.badges[badge] %}
+            <span class="badge {{ badge_data.style }}">{{ badge_data.title }}</span>
+            {% endfor %}
+            {% unless forloop.last %}
             <br />
-            <span class="badge badge-primary">Gameplay Programmer</span>
-            <!--
-            <br />
-            <span class="badge badge-success">3Cs</span>
-            <span class="badge badge-success">System Design</span>
-            <span class="badge badge-success">Signs</span>
-            <span class="badge badge-success">Feedbacks</span>
-            <span class="badge badge-success">Balancing</span>
-            -->
+            {% endunless %}
+            {% endfor %}
           </div>
         </div>
         <div class="row d-flex px-2">
-          <p class="text-dark col-12 col-md-8 col-lg-8">
-          Tom Clancy's XDefiant is a <b>free-to-play</b>, <b>fast-paced arena shooter</b> that combines intense gunplay
-          with personalized loadouts and specialized factions,
-          as teams of gunfighters – called Defiants – battle for domination.
-          </p>
+          <p class="text-dark col-12 col-md-8 col-lg-8">{{ project.description }}</p>
         </div>
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+        <div class="d-flex px-2">
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <div class="ml-auto">
+            <img class="structure-logo" src="{{ project.structure-logo | relative_url }}" />
+          </div>
+        </div>
       </div>
     </div>
-    
+    {% endif %}
+    {% endfor %}
     <div class="carousel-item">
       <img class="third-slide carousel-item-background" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
       <div class="carousel-caption rounded bg-light p-3 text-left">         
@@ -179,14 +122,6 @@ title: Home
             <span class="badge badge-secondary">Level Designer</span>
             <br />
             <span class="badge badge-info">Gameplay Programmer</span>
-            <!--
-            <br />
-            <span class="badge badge-success">3Cs</span>
-            <span class="badge badge-success">System Design</span>
-            <span class="badge badge-success">Signs</span>
-            <span class="badge badge-success">Feedbacks</span>
-            <span class="badge badge-success">Balancing</span>
-            -->
           </div>
         </div>
         <div class="row d-flex px-2">
@@ -209,6 +144,71 @@ title: Home
 </div>
 
 <hr class="my-5">
+<div class="fat-container px-4">
+  <h1 class="display-3 mb-4 text-center">Games</h1>
+  <div class="card-deck">
+    {% assign index = 0 %}
+    {% for project_hash in site.data.projects %}
+    {% assign project = project_hash[1] %}
+    {% unless project.hidden %}
+    {% assign index = index | plus: 1 %}
+    <div class="card p-0 text-left">
+      <div class="card-img-top card-thumbnail">
+        <img class="card-img-top fill-image" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
+      </div>
+      <div class="card-body d-flex flex-column">
+       <h4 class="card-title text-dark">{{ project.title }}</h4>
+        <p class="card-text text-dark">{{ project.short-description }}</p>
+          <div class="p-0 mt-auto" >
+            {% for line in project.badges %}
+            {% for badge in line %}
+            {% assign badge_data = site.data.badges[badge] %}
+            <span class="badge {{ badge_data.style }}">{{ badge_data.title }}</span>
+            {% endfor %}
+            {% unless forloop.last %}
+            <br />
+            {% endunless %}
+            {% endfor %}
+          </div>
+      </div>
+    </div>
+    {% assign remainder2 = index | modulo: 2 %}
+    {% assign remainder3 = index | modulo: 3 %}
+    {% assign remainder4 = index | modulo: 4 %}
+
+    {% if remainder4 == 0 %}
+    <div class="w-100 my-2 d-none d-lg-block"></div>
+    {% endif %}
+    {% if remainder3 == 2 %}
+    <div class="w-100 my-2 d-none d-md-block d-lg-none"></div>
+    {% endif %}
+    {% if remainder2 == 0 %}
+    <div class="w-100 my-2 d-none d-sm-block d-md-none"></div>
+    {% endif %}
+    <div class="w-100 my-2 d-block d-sm-none"></div>
+    {% endunless %}
+    {% endfor %}
+  </div>
+</div>
+<div class="fat-container px-4">
+  <h1 class="display-3 mb-4 text-center">Other projects</h1>
+  <ul class="nav nav-fill nav-pills" id="myTab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="creative-tab" data-toggle="tab" href="#creative" role="tab" aria-controls="creative" aria-selected="true">Creative</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="engineering-tab" data-toggle="tab" href="#engineering" role="tab" aria-controls="engineering" aria-selected="false">Engineering</a>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="creative" role="tabpanel" aria-labelledby="creative-tab">
+      {% include project_list.html projects=site.data.creative-projects%}
+    </div>
+    <div class="tab-pane fade" id="engineering" role="tabpanel" aria-labelledby="engineering-tab">
+      {% include project_list.html projects=site.data.engineering-projects%}
+    </div>
+  </div>
+</div>
 <div class="container">
 <h1>About me</h1>
 </div>
