--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@ title: Home
     <li data-target="#myCarousel" data-slide-to="3" class=""></li>
   </ol>
   <div class="carousel-inner">
+    {% assign index = 0 %}
     {% for project_hash in site.data.projects %}
     {% assign project = project_hash[1] %}
     {% if project.featured %}
-    {% if forloop.index == 1 %}
+    {% assign index = index | plus: 1 %}
+    {% if index == 1 %}
     <div class="carousel-item active">
     {% else %}
     <div class="carousel-item">
