Forced data folders order

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ title: Home
   </ol>
   <div class="carousel-inner">
     {% assign index = 0 %}
-    {% for project_hash in site.data.projects %}
+    {% assign sorted_projects = site.data.projects | sort %}
+    {% for project_hash in sorted_projects %}
     {% assign project = project_hash[1] %}
     {% if project.featured %}
     {% assign index = index | plus: 1 %}
@@ -148,49 +149,8 @@ title: Home
 <hr class="my-5">
 <div class="fat-container px-4">
   <h1 class="display-3 mb-4 text-center">Games</h1>
-  <div class="card-deck">
-    {% assign index = 0 %}
-    {% for project_hash in site.data.projects %}
-    {% assign project = project_hash[1] %}
-    {% unless project.hidden %}
-    {% assign index = index | plus: 1 %}
-    <div class="card p-0 text-left">
-      <div class="card-img-top card-thumbnail">
-        <img class="card-img-top fill-image" src="{{ project.thumbnail | relative_url }}" alt="{{ project.title }}">
-      </div>
-      <div class="card-body d-flex flex-column">
-       <h4 class="card-title text-dark">{{ project.title }}</h4>
-        <p class="card-text text-dark">{{ project.short-description }}</p>
-          <div class="p-0 mt-auto" >
-            {% for line in project.badges %}
-            {% for badge in line %}
-            {% assign badge_data = site.data.badges[badge] %}
-            <span class="badge {{ badge_data.style }}">{{ badge_data.title }}</span>
-            {% endfor %}
-            {% unless forloop.last %}
-            <br />
-            {% endunless %}
-            {% endfor %}
-          </div>
-      </div>
-    </div>
-    {% assign remainder2 = index | modulo: 2 %}
-    {% assign remainder3 = index | modulo: 3 %}
-    {% assign remainder4 = index | modulo: 4 %}
-
-    {% if remainder4 == 0 %}
-    <div class="w-100 my-2 d-none d-lg-block"></div>
-    {% endif %}
-    {% if remainder3 == 2 %}
-    <div class="w-100 my-2 d-none d-md-block d-lg-none"></div>
-    {% endif %}
-    {% if remainder2 == 0 %}
-    <div class="w-100 my-2 d-none d-sm-block d-md-none"></div>
-    {% endif %}
-    <div class="w-100 my-2 d-block d-sm-none"></div>
-    {% endunless %}
-    {% endfor %}
-  </div>
+  {% assign sorted_projects = site.data.projects | sort %}
+  {% include project_list.html projects=sorted_projects %}
 </div>
 <div class="fat-container px-4">
   <h1 class="display-3 mb-4 text-center">Other projects</h1>
@@ -204,10 +164,12 @@ title: Home
   </ul>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="creative" role="tabpanel" aria-labelledby="creative-tab">
-      {% include project_list.html projects=site.data.creative-projects%}
+      {% assign sorted_projects = site.data.creative-projects | sort %}
+      {% include project_list.html projects=sorted_projects %}
     </div>
     <div class="tab-pane fade" id="engineering" role="tabpanel" aria-labelledby="engineering-tab">
-      {% include project_list.html projects=site.data.engineering-projects%}
+      {% assign sorted_projects = site.data.engineering-projects | sort %}
+      {% include project_list.html projects=sorted_projects %}
     </div>
   </div>
 </div>
