--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ title: Home
           <p class="text-dark col-12 col-md-8 col-lg-8">{{ project.description }}</p>
         </div>
         <div class="d-flex px-2">
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <p><a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Learn more</a></p>
           <div class="ml-auto">
             <img class="structure-logo" src="{{ project.structure-logo | relative_url }}" />
           </div>
@@ -115,7 +115,18 @@ title: Home
 
 <hr class="my-5">
 <div class="fat-container px-4">
-  <h1 class="display-3 mb-4 text-center">Games</h1>
+  <h1 class="display-3 mb-5 text-center">Games</h1>
   {% assign sorted_projects = site.data.projects | sort %}
   {% include project_list.html projects=sorted_projects %}
+</div>
+<hr class="my-5">
+<div class="container-fluid bg-dark py-5 d-flex">
+  <div class="container px-4 bg-dark">
+    <h1 class="display-3 mb-5 text-center text-light">Want more?</h1>
+    <p class="lead text-light">
+      The projects presented here are the most important to me. <br />
+      However, if you want to see more projects and different cross-disciplinary skills, <br />
+      you can check out my <a class="btn btn-primary" href="/project_library" role="button">Project Library</a>
+    </p>
+  </div>
 </div>
