--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: default
 title: Home
 ---
 {% include nav.html %}
+{% include featured-carousel.html %}
+<hr class="my-5">
 <div class="jumbotron-fluid mx-0 px-0 paralsec paral">
-  <div class="px-3 pt-5 my-0 pb-0 text-left">
+  <div class="px-3 py-5 my-0 text-left">
     <div class="py-4"></div>
     <div class="container">
       <!-- Example row of columns -->
@@ -29,92 +31,8 @@ title: Home
     </div>
   </div>
 </div>
-
 <div class="my-0 py-4 bg-primary"></div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="20000">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-    <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-    <li data-target="#myCarousel" data-slide-to="3" class=""></li>
-  </ol>
-  <div class="carousel-inner">
-    {% assign index = 0 %}
-    {% assign sorted_projects = site.data.projects | sort %}
-    {% for project_hash in sorted_projects %}
-    {% assign project = project_hash[1] %}
-    {% if project.featured %}
-    {% assign index = index | plus: 1 %}
-    {% if index == 1 %}
-    <div class="carousel-item active">
-    {% else %}
-    <div class="carousel-item">
-    {% endif %}
-      <video title="{{ project.title }}" preload="auto" autoplay loop muted class="first-slide carousel-item-background">
-        <source src="{{ project.sd-no-sound-video | relative_url }}" type="video/mp4">
-        <p>{{ project.title }}</p>
-     </video>
-      <div class="carousel-caption rounded bg-light p-3 text-left">         
-        <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">{{ project.title }}</h1>
-          <div class="p-2 align-self-end text-right" >
-            {% for line in project.badges %}
-            {% for badge in line %}
-            {% assign badge_data = site.data.badges[badge] %}
-            <span class="badge {{ badge_data.style }}">{{ badge_data.title }}</span>
-            {% endfor %}
-            {% unless forloop.last %}
-            <br />
-            {% endunless %}
-            {% endfor %}
-          </div>
-        </div>
-        <div class="row d-flex px-2">
-          <p class="text-dark col-12 col-md-8 col-lg-8">{{ project.description }}</p>
-        </div>
-        <div class="d-flex px-2">
-          <p><a class="btn btn-lg btn-primary" href="{{ project.dedicated-page | default: "#" }}" role="button">Learn more</a></p>
-          <div class="ml-auto">
-            <img class="structure-logo" src="{{ project.structure-logo | relative_url }}" />
-          </div>
-        </div>
-      </div>
-    </div>
-    {% endif %}
-    {% endfor %}
-    <div class="carousel-item">
-      <img class="third-slide carousel-item-background" src="{{ "/assets/images/so_clean/so_clean_screen_3.png" | relative_url }}" />
-      <div class="carousel-caption rounded bg-light p-3 text-left">         
-        <div class="row d-flex px-2">
-          <h1 class="p-2 mr-auto">Personal Projects <span class="text-muted">& Game Jams</span></h1>
-          <div class="p-2 align-self-end text-right" >
-            <span class="badge badge-primary">Game Designer</span>
-            <span class="badge badge-secondary">Level Designer</span>
-            <br />
-            <span class="badge badge-info">Gameplay Programmer</span>
-          </div>
-        </div>
-        <div class="row d-flex px-2">
-          <p class="text-dark col-12 col-md-8 col-lg-8">
-            I have made many other game projects, which allowed me to develop various skills over the years.
-          </p>
-        </div>
-        <p><a class="btn btn-lg btn-primary" href="https://oramy.itch.io" role="button">All Projects</a></p>
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon carousel-control-big-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-    <span class="carousel-control-next-icon carousel-control-big-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<hr class="my-5">
-<div class="fat-container px-4">
+<div class="fat-container px-4 pt-3">
   <h1 class="display-3 mb-5 text-center">Games</h1>
   {% assign sorted_projects = site.data.projects | sort %}
   {% include project_list.html projects=sorted_projects %}
