--- a/projects/fired-up.html
+++ b/projects/fired-up.html
@@ -74,7 +74,7 @@ title: Fired Up!
       <div class="col-md-3">
         <div class="sticky-top pt-3">
           <div class="nav flex-md-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-            {% include v-pill-tab.html name="Communication" active="true" %}
+            {% include v-pill-tab.html name="Working with the team" active="true" %}
             {% include v-pill-tab.html name="Writing Specifications" %}
             {% include v-pill-tab.html name="Research" %}
             {% include v-pill-tab.html name="3Cs" %}
@@ -88,8 +88,8 @@ title: Fired Up!
       <hr class="d-md-none d-block w-100">
       <div class="col-md-6 mt-3">
         <div class="tab-content" id="v-pills-tabContent">
-          {% include v-pill-tab-content.html name="Communication" active="true" %}
-            <h2>Communication</h2>
+          {% include v-pill-tab-content.html name="Working with the team" active="true" %}
+            <h2>Working with the team</h2>
             <hr>
             <div class="row">
               <div class="col-lg-6">
@@ -104,16 +104,31 @@ title: Fired Up!
                   {% include image_carousel.html images=image_list captions=caption_list carousel-id="fired_up_carousel_communication" %}
               </div>
               <div class="col-lg-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
+                <h6>Including the team</h6>
+                <p>
+                  We organized brainstormings to gather ideas from the team that we
+                  would then filter and synthetize to get to mechanics matching our intentions and scope.
+                </p>
+                <h6>Keeping the team informed</h6>
+                <p>
+                  We also held small and short meetings to keep the team updated with
+                  key decisions in the beginning of the project.
+                </p>
+                <h6>Working with programmers</h6>
+                <p>
+                  My engineering skills allowed me to easily understand what the
+                  programming challenges were and to design features with the right
+                  level of detail.
+                </p>
               </div>
             </div>
           {% include div-end.html %}
           
           {% include v-pill-tab-content.html name="Writing Specifications" content="w" %}
-            <h2 class="button">Writing Specifications</h2>
+            <h2>Writing Documents</h2>
             <hr>
-            <div class="row">
-              <div class="col-lg-12">
+            <div class="row justify-content-lg-center">
+              <div class="col-lg-10">
                   {% assign image_list = "
                   /assets/images/fired_up/design_documents/Containers/Contenants comportement remplissage(1).png,
                   /assets/images/fired_up/design_documents/Containers/Contenants comportement remplissage(2).png,
@@ -142,19 +157,33 @@ title: Fired Up!
                   " | split: "," %}
                   {% include image_carousel.html images=image_list captions=caption_list loop-caption="true" carousel-id="fired_up_carousel_specifications" %}
               </div>
-              <div class="col-lg-8">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
+              <div class="col-12">
+                Writing synthetic and comprehensive documents which can be modified easily
+                to share with the team is decisive. Here is an example document I have made
+                for this project.
               </div>
             </div>
           {% include div-end.html %}
           {% include v-pill-tab-content.html name="Research" %}
-            <h2 class="button">Research</h2>
+            <h2>Research</h2>
             <hr>
             <div class="row">
-              <div class="col-lg-8">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
+              <div class="col-lg-6">
+                <h6>Making well informed decisions.</h6>
+                <p>
+                I investigated several subjects during this project to be able
+                to make well informed decisions. To be more efficient, we split
+                the workload to research key design fields during the beginning
+                of the project.
+                </p>
+
+                <h6>Research in Level Design</h6>
+                <p>
+                Iterating over level design and testing out ideas was also part of
+                my work in this project.
+                </p>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                   {% assign image_list = "
                   /assets/images/fired_up/design_documents/systemic_gd_research_overview_square.png,
                   /assets/images/fired_up/design_documents/verticality_research_overview.png,
@@ -170,18 +199,15 @@ title: Fired Up!
             </div>
           {% include div-end.html %}
           {% include v-pill-tab-content.html name="3Cs" %}
-            <h2 class="button">3Cs</h2>
+            <h2>3Cs</h2>
             <hr>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
           {% include div-end.html %}
           {% include v-pill-tab-content.html name="Metrics" %}
-            <h2 class="button">Metrics</h2>
+            <h2>Metrics</h2>
             <hr>
             <div class="row">
-              <div class="col-lg-8">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
-              </div>
-              <div class="col-lg-4">
+              <div class="col-lg-6">
                   {% assign image_list = "
                   /assets/images/fired_up/design_documents/camera_metrics_square.png,
                   /assets/images/fired_up/design_documents/camera_ground_square.png,
@@ -194,12 +220,29 @@ title: Fired Up!
                   " | split: ";" %}
                   {% include image_carousel.html images=image_list captions=caption_list carousel-id="fired_up_carousel_metrics" %}
               </div>
+              <div class="col-lg-6">
+                <h6>Camera</h6>
+                <p>
+                We defined camera's maximum range, object and character sizes to ensure game readability.
+                This led to our level size as we wanted one-screen levels.
+                </p>
+                <h6>Level Metrics</h6>
+                Walls' height and thickness were then defined on the camera view to minimize
+                blind spots while still ensuring circulation was clear. 
+                <br>We used a base unit (1m) to build our levels.
+                </p>
+                <h6>Helpers</h6>
+                <p>
+                I made helpers to ensure those metrics were respected when we integrated content
+                and designed levels.
+                </p>
+              </div>
             </div>
           {% include div-end.html %}
           {% include v-pill-tab-content.html name="Features" %}
           {% include div-end.html %}
           {% include v-pill-tab-content.html name="Balancing" %}
-            <h2 class="button">Balancing</h2>
+            <h2>Balancing</h2>
             <hr>
             <div class="row">
               <div class="col-lg-6">
@@ -219,13 +262,14 @@ title: Fired Up!
             </div>
           {% include div-end.html %}
           {% include v-pill-tab-content.html name="Level Design" %}
-            <h2 class="button">Level Design</h2>
+            <h2>Level Design</h2>
             <hr>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus mauris nec ex dictum gravida. Etiam a diam in felis cursus dapibus eu ut leo. Ut in dictum dui. Cras enim justo, finibus eget ultricies et, blandit id lorem. Donec consectetur magna eget eros bibendum vestibulum. Nulla egestas sollicitudin felis ac accumsan. Maecenas sed quam blandit, ultrices nibh quis, varius lectus. Morbi tincidunt justo facilisis quam accumsan gravida bibendum eu ante.
           {% include div-end.html %}
         </div>
       </div>
     </div>
+    <!--
     <div class="container-fluid bg-light p-2 row justify-content-md-center">
       <div class= "col-lg-8">
       <h2>My work</h2>
@@ -368,5 +412,6 @@ title: Fired Up!
       </details>
     </div>
       </div>
+    -->
   </div>
 </div>
