--- a/projects/fired-up.html
+++ b/projects/fired-up.html
@@ -122,10 +122,10 @@ title: Fired Up!
             {% include v-pill-tab.html name="One Page" active="true" %}
             {% include v-pill-tab.html name="Writing documents" %}
             {% include v-pill-tab.html name="Research" %}
-            <hr class="my-1 w-100">
+            <hr class="my-1 w-100 d-none d-md-block">
             {% include v-pill-tab.html name="Metrics" %}
             {% include v-pill-tab.html name="Balancing" %}
-            <hr class="my-1 w-100">
+            <hr class="my-1 w-100 d-none d-md-block">
             {% include v-pill-tab.html name="Team work" %}
             <!--{% include v-pill-tab.html name="3Cs" %}
             {% include v-pill-tab.html name="Features" %}
